[gd_scene load_steps=49 format=2]

[ext_resource path="res://sprites/player/v1/player_v1_03.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/v1/player_v1_02.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/v1/player_v1_00.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/v1/player_v1_01.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/v1/player_v1_06.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/v1/player_v1_08.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/v1/player_v1_10.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/v1/player_v1_11.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/v1/player_v1_05.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/v1/player_v1_12.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/v1/player_v1_13.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/v1/player_v1_09.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/v1/player_v1_07.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/v1/player_v1_04.png" type="Texture" id=14]
[ext_resource path="res://Player.gd" type="Script" id=15]
[ext_resource path="res://sprites/player/v1/player_death_0.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/v1/player_death_3.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/v1/player_death_1.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/v1/player_death_2.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/v1/player_death_4.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/v1/player_death_5.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/v1/player_death_6.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/v1/player_death_7.png" type="Texture" id=23]
[ext_resource path="res://sprites/player/v1/player_death_8.png" type="Texture" id=24]
[ext_resource path="res://pickups/hp/hp_picked_0.png" type="Texture" id=25]
[ext_resource path="res://pickups/hp/hp_picked_1.png" type="Texture" id=26]
[ext_resource path="res://pickups/hp/hp_picked_4.png" type="Texture" id=27]
[ext_resource path="res://pickups/hp/hp_picked_2.png" type="Texture" id=28]
[ext_resource path="res://pickups/hp/hp_picked_5.png" type="Texture" id=29]
[ext_resource path="res://pickups/hp/hp_picked_3.png" type="Texture" id=30]
[ext_resource path="res://pickups/armor/armor_picked_0.png" type="Texture" id=31]
[ext_resource path="res://pickups/armor/armor_picked_3.png" type="Texture" id=32]
[ext_resource path="res://pickups/armor/armor_picked_4.png" type="Texture" id=33]
[ext_resource path="res://pickups/armor/armor_picked_5.png" type="Texture" id=34]
[ext_resource path="res://pickups/armor/armor_picked_1.png" type="Texture" id=35]
[ext_resource path="res://pickups/armor/armor_picked_2.png" type="Texture" id=36]
[ext_resource path="res://pickups/ammo/ammo_picked_2.png" type="Texture" id=37]
[ext_resource path="res://pickups/ammo/ammo_picked_5.png" type="Texture" id=38]
[ext_resource path="res://pickups/ammo/ammo_picked_4.png" type="Texture" id=39]
[ext_resource path="res://pickups/ammo/ammo_picked_1.png" type="Texture" id=40]
[ext_resource path="res://pickups/ammo/ammo_picked_0.png" type="Texture" id=41]
[ext_resource path="res://pickups/ammo/ammo_picked_6.png" type="Texture" id=42]
[ext_resource path="res://pickups/ammo/ammo_picked_3.png" type="Texture" id=43]
[ext_resource path="res://sprites/player/v1/player_dodge_1.png" type="Texture" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Shoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "Duck",
"speed": 0.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "Fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "DuckShoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": false,
"name": "Jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": false,
"name": "Dodge",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.23918, 5.81005 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 42 ) ],
"loop": true,
"name": "AmmoPicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 29 ) ],
"loop": true,
"name": "HPPicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 34 ) ],
"loop": true,
"name": "ArmorPicked",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 22
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Player_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Dodge"

[node name="Player_Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Player_Duckbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.38886, 2.19294 )
shape = SubResource( 3 )
disabled = true

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 10, -1 )

[node name="Player_Cam" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -180
limit_right = 640
limit_bottom = 180
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PulseStopTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PickupTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PickupStopTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Pick_Anim" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "AmmoPicked"

[node name="ShootCDTimer" type="Timer" parent="."]
one_shot = true

[node name="WaterSplashTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="Player_Anim" to="." method="_on_Player_Anim_animation_finished"]
[connection signal="timeout" from="PulseStopTimer" to="." method="_on_PulseStopTimer_timeout"]
[connection signal="timeout" from="PickupStopTimer" to="." method="_on_PickupStopTimer_timeout"]
[connection signal="animation_finished" from="Pick_Anim" to="." method="_on_Pick_Anim_animation_finished"]
[connection signal="timeout" from="WaterSplashTimer" to="." method="_on_WaterSplashTimer_timeout"]
